--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@
 			</div>
 		</nav>
 		<nav class='hidden container items-center fixed bottom-0 bg-white gap-20 justify-center py-3 sm:gap-7'>
-			<div class='grid place-items-center gap-y-[7px]'>
+			<div class='grid place-items-center gap-y-2'>
 				<img class='w-[28px] h-[28px]' src="/assets/images/menu/redBars.svg" alt="">
 				<a class='text-mainColorRed'>Каталог</a>
 			</div>
