--- a/pages/products.html
+++ b/pages/products.html
@@ -111,8 +111,8 @@
 					<div class='grid grid-cols-3 gap-5 mt-10 sm:grid-cols-2'>
 						<!-- card -->
 						<div class='bg-white py-5 px-4 rounded-md border'>
-							<img class='bg-[#F3F2F1] p-2 rounded-md float-right' src="/assets/images/products_cards/like_icon.svg" alt="">
-							<img src="/assets/images/products_cards/image1.jpg" alt="">
+							<img class='bg-[#F3F2F1] p-2 rounded-md absolute z-10 ' src="/assets/images/products_cards/like_icon.svg" alt="">
+							<img class='relative m-auto' src="/assets/images/products_cards/image1.jpg" alt="">
 							<h3 class='text-xl font-bold mt-2 mb-11'>139,99 <span>&#8381;</span></h3>
 							<p class='text-lg'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</p>
 							<div class='flex my-4 gap-2'>
@@ -125,8 +125,8 @@
 							<button class='bg-[#B60220] w-full text-lg text-white py-3 rounded-md'>В корзину</button>
 						</div>
 						<div class='bg-white py-5 px-4 rounded-md border'>
-							<img class='bg-[#F3F2F1] p-2 rounded-md float-right' src="/assets/images/products_cards/like_icon.svg" alt="">
-							<img src="/assets/images/products_cards/image2.jpg" alt="">
+							<img class='bg-[#F3F2F1] p-2 rounded-md absolute z-10 ' src="/assets/images/products_cards/like_icon.svg" alt="">
+							<img class='relative m-auto' src="/assets/images/products_cards/image1.jpg" alt="">
 							<div class='flex justify-between'>
 								<h3 class='text-xl font-bold mt-2'>139,99 <span>&#8381;</span></h3>
 								<h3 class='text-xl mt-2'>140,50 <span>&#8381;</span></h3>
@@ -146,8 +146,8 @@
 							<button class='bg-[#B60220] w-full text-lg text-white py-3 rounded-md'>В корзину</button>
 						</div>
 						<div class='bg-white py-5 px-4 rounded-md border'>
-							<img class='bg-[#F3F2F1] p-2 rounded-md float-right' src="/assets/images/products_cards/like_icon.svg" alt="">
-							<img src="/assets/images/products_cards/image3.jpg" alt="">
+							<img class='bg-[#F3F2F1] p-2 rounded-md absolute z-10 ' src="/assets/images/products_cards/like_icon.svg" alt="">
+							<img class='relative m-auto' src="/assets/images/products_cards/image1.jpg" alt="">
 							<div class='flex justify-between'>
 								<h3 class='text-xl font-bold mt-2'>139,99 <span>&#8381;</span></h3>
 								<h3 class='text-xl mt-2'>140,50 <span>&#8381;</span></h3>
@@ -167,8 +167,8 @@
 							<button class='bg-[#B60220] w-full text-lg text-white py-3 rounded-md'>В корзину</button>
 						</div>
 						<div class='bg-white py-5 px-4 rounded-md border'>
-							<img class='bg-[#F3F2F1] p-2 rounded-md float-right' src="/assets/images/products_cards/like_icon.svg" alt="">
-							<img src="/assets/images/products_cards/image4.jpg" alt="">
+							<img class='bg-[#F3F2F1] p-2 rounded-md absolute z-10 ' src="/assets/images/products_cards/like_icon.svg" alt="">
+							<img class='relative m-auto' src="/assets/images/products_cards/image1.jpg" alt="">
 							<h3 class='text-xl font-bold mt-2 mb-5'>139,99 <span>&#8381;</span></h3>
 							<p class='text-lg'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</p>
 							<div class='flex my-4 gap-2'>
@@ -181,8 +181,8 @@
 							<button class='bg-[#B60220] w-full text-lg text-white py-3 rounded-md'>В корзину</button>
 						</div>
 						<div class='bg-white py-5 px-4 rounded-md border'>
-							<img class='bg-[#F3F2F1] p-2 rounded-md float-right' src="/assets/images/products_cards/like_icon.svg" alt="">
-							<img src="/assets/images/products_cards/image5.jpg" alt="">
+							<img class='bg-[#F3F2F1] p-2 rounded-md absolute z-10 ' src="/assets/images/products_cards/like_icon.svg" alt="">
+							<img class='relative m-auto' src="/assets/images/products_cards/image1.jpg" alt="">
 							<h3 class='text-xl font-bold mt-2 mb-5'>139,99 <span>&#8381;</span></h3>
 							<p class='text-lg'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</p>
 							<div class='flex my-4 gap-2'>
@@ -195,8 +195,8 @@
 							<button class='bg-[#B60220] w-full text-lg text-white py-3 rounded-md'>В корзину</button>
 						</div>
 						<div class='bg-white py-5 px-4 rounded-md border'>
-							<img class='bg-[#F3F2F1] p-2 rounded-md float-right' src="/assets/images/products_cards/like_icon.svg" alt="">
-							<img src="/assets/images/products_cards/image6.jpg" alt="">
+							<img class='bg-[#F3F2F1] p-2 rounded-md absolute z-10 ' src="/assets/images/products_cards/like_icon.svg" alt="">
+							<img class='relative m-auto' src="/assets/images/products_cards/image1.jpg" alt="">
 							<h3 class='text-xl font-bold mt-2 mb-5'>139,99 <span>&#8381;</span></h3>
 							<p class='text-lg'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</p>
 							<div class='flex my-4 gap-2'>
